<resources>
    <string name="app_name">RAN</string>
    <string name="btStart">Start</string>
    <string name="btFinalize">Finish</string>
    <string name="sNumberWords">Number of words: %s</string>
    <string name="sNumberMatches">Number of matches: %s</string>
    <string name="sNumberMiss">Number of miss: %s</string>
    <string name="voiceRecognitionNotPresent">Voice recognition not available.</string>
    <string name="audioError">Audio error on application</string>
    <string name="clientError">Cliente error</string>
    <string name="networkError">Network error</string>
    <string name="noMatchError">No matches found</string>
    <string name="serverError">Server problem</string>
    <string name="time">Time: %s seconds</string>
    <string name="meanTime">Mean time/stimuli: %s seconds</string>
    <string name="progress_dialog">Processing</string>
    <string name="please_wait">Please wait...</string>
    <string name="menu_color">Colors</string>
    <string name="menu_digit">Digits</string>
    <string name="menu_letter">Letters</string>
    <string name="menu_object">Objects</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="reseted">Reseted</string>
    <string name="resultTabTitle1">Summary</string>
    <string name="resultTabTitle2">Matches</string>
    <string name="resultTabTitle3">Wrongs</string>
    <string name="test">Test</string>
    <string name="play">Play</string>

    <string name="two">2</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="nine">9</string>

    <string name="letter_a">a aa ah e</string>
    <string name="letter_f">f F s S</string>
    <string name="letter_s">s ss es e</string>
    <string name="letter_g">g G d D</string>
    <string name="letter_u">u U</string>


    <string name="letter_d">d v b e</string>
    <string name="letter_o">o oh</string>
    <string name="letter_p">p t v b e</string>

    <string name="letter_r">r R s S</string>
    <string name="letter_h">h H</string>


    <string name="language_code">en-US</string>

    <string name="createUser">Create</string>
    <string name="updateUser">Update</string>
    <string name="deleteUser">Remove</string>

    <string name="inputName">Name</string>
    <string name="inputAge">Age</string>
    <string name="inputSchoolGrade">Grade</string>
    <string name="inputGender">Gender</string>
    <string name="inputPhoto">Photo</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>

    <string name="err_required_input">%s is a required field</string>
    <string name="err_msg_age">Enter valid age</string>
    <string name="err_msg_SchoolGrade">Enter valid school grade</string>
    <string name="err_msg_phone">Enter a valid phone</string>
    <string name="registerButton">Register</string>
    <string name="createSuccess">Registered!</string>
    <string name="updateSuccess">Updated!</string>
    <string name="title_activity_sign_in">SignInActivity</string>

    <string name="err_msg_signup">There was a problem registering the testUser</string>
    <string name="err_msg_signin">There was a problem authenticating the testUser</string>

    <string name="msg_sign_in">Login</string>
    <string name="msg_sign_up">Register</string>
    <string name="msg_lost_password">Lost password?</string>
    <string name="authenticating">Authenticating</string>
    <string name="userLabel">User</string>
    <string name="parentLabel">Parent</string>
    <string name="inputPhone">Telefone</string>
    <string name="user">User</string>
    <string name="parent">Parent</string>
    <string name="resultHistory">Results History</string>
    <string name="loading">Loading...</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_delete_msg">Are you sure you wanna delete this user? This is a irreversible step.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recoverPassword">Recover password</string>
    <string name="recoverSuccessfull">You will receive an email with instructions how to reset your password.</string>
    <string name="err_msg_wrong_auth_data">Wrong email/password.</string>

    <string name="change_font">Change font</string>
    <string name="choose">Choose</string>
</resources>
