<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.junior.davino.ran.fragments.TestUserForm">

    <LinearLayout
        android:id="@+id/user_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:theme="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputName"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:theme="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputAge"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_schoolGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:theme="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_schoolGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputSchoolGrade"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:text="@string/genderMale" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderFemale" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
