<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.junior.davino.ran.fragments.TestUserParentForm">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_parent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:theme="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_parent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputName"
                android:inputType="text"  />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_parent_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:theme="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_parent_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputEmail"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_parent_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:theme="@style/TextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_parent_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputPhone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>
