<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.junior.davino.ran.activities.HomeTestActivity"
    android:background="@color/colorBackgroundLight"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_gravity="center_horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:weightSum="1"
                android:layout_weight="0.5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_margin="2dp">

                    <Button
                        android:id="@+id/btn_color"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/menu_color"
                        android:background="@drawable/border_tb_1"
                        android:drawableBottom="@drawable/ic_palette_white_24dp"
                        style="@style/MainButtonTheme" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_margin="2dp">

                    <Button
                        android:id="@+id/btn_digit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/menu_digit"
                        android:background="@drawable/border_tb_2"
                        android:drawableBottom="@drawable/ic_looks_one_white_24dp"
                        style="@style/MainButtonTheme"/>
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:weightSum="1"
                android:layout_weight="0.5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_margin="2dp">
                    <Button
                        android:id="@+id/btn_letter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/menu_letter"
                        android:background="@drawable/border_tb_3"
                        android:drawableBottom="@drawable/ic_text_format_white_24dp"
                        style="@style/MainButtonTheme"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_margin="2dp">

                    <Button
                        android:id="@+id/btn_object"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/menu_object"
                        android:background="@drawable/border_tb_4"
                        android:drawableBottom="@drawable/ic_flight_white_24dp"
                        style="@style/MainButtonTheme"/>
                </RelativeLayout>
            </TableRow>


        </TableLayout>

    </LinearLayout>

</LinearLayout>
